--- a/TagGeneration.ipynb
+++ b/TagGeneration.ipynb
@@ -163,16 +163,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'token_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-c00074ab82e6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mfiltered_tokens\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mfiltered_tokens\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstop_words_filter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtoken_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;31m# print(filtered_tokens)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'token_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from nltk.corpus import stopwords\n",
     "def stop_words_filter(token_list):\n",
     "    stopword_set = set(stopwords.words('english'))    \n",
     "    filtered_tokens = []\n",
+    "    res = [w for w in token_list if len(w)>2]\n",
     "    for token in token_list:\n",
-    "        if token not in stopword_set and token.isnumeric() == False:\n",
+    "        if token not in stopword_set and token.isnumeric() == False and token in res:\n",
     "            filtered_tokens.append(token)\n",
     "    return filtered_tokens\n",
     "\n",
